// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c5 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
}

.c6 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
}

.c3 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
}

.c4 {
  color: #262D33;
}

.c1 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c1 .c2 {
  color: #343C42;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
  padding: 0.5rem 0;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 400;
  list-style-type: none;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c7 button,
.c7 a {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  min-height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c7 button:hover,
.c7 a:hover,
.c7 button:focus,
.c7 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 .Icon-sc-7y0t4i-0 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c7:hover,
.c7[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c7[aria-current='true'] {
  font-weight: 600;
}

.c7[disabled] {
  color: #939BA5;
}

.c7[disabled] button,
.c7[disabled] a {
  cursor: not-allowed;
}

.c7[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c8 .Icon-sc-7y0t4i-0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2 c3 c4"
      fontFamily="brand"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className="c5"
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c6"
    type="none"
  >
    <li
      className="c7 c8"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          what?
        </span>
      </button>
    </li>
    <li
      className="c7 c8"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          who?
        </span>
      </button>
    </li>
    <li
      className="c7 c8"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          where?
        </span>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c5 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
}

.c3 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
}

.c4 {
  color: #262D33;
}

.c1 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c1 .c2 {
  color: #343C42;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
  padding: 0.5rem 0;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 400;
  list-style-type: none;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 button,
.c6 a {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  min-height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c6 button:hover,
.c6 a:hover,
.c6 button:focus,
.c6 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 .Icon-sc-7y0t4i-0 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6:hover,
.c6[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c6[aria-current='true'] {
  font-weight: 600;
}

.c6[disabled] {
  color: #939BA5;
}

.c6[disabled] button,
.c6[disabled] a {
  cursor: not-allowed;
}

.c6[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c7 .Icon-sc-7y0t4i-0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2 c3 c4"
      fontFamily="brand"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c5"
    type="none"
  >
    <li
      className="c6 c7"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          what?
        </span>
      </button>
    </li>
    <li
      className="c6 c7"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          who?
        </span>
      </button>
    </li>
    <li
      className="c6 c7"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          where?
        </span>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup 1`] = `
.c1 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  list-style-type: none;
  padding: 0.5rem 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 400;
  list-style-type: none;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  min-height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c2 button:hover,
.c2 a:hover,
.c2 button:focus,
.c2 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .Icon-sc-7y0t4i-0 {
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2:hover,
.c2[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c2[aria-current='true'] {
  font-weight: 600;
}

.c2[disabled] {
  color: #939BA5;
}

.c2[disabled] button,
.c2[disabled] a {
  cursor: not-allowed;
}

.c2[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c3 .Icon-sc-7y0t4i-0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<li
  className="c0"
>
  <ul
    className="c1"
    type="none"
  >
    <li
      className="c2 c3"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <span>
          who!
        </span>
      </button>
    </li>
  </ul>
</li>
`;
